# GPU-Specialisation-Capstone

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SETUP.md  build.sh  run_all_filters.sh
data/: README.md
include/: cuda_utils.h  kernels.h  video_io.h
src/: cuda_utils.cu  kernels.cu  main.cu  video_io.cu  video_io_impl.cpp
